cf_analysis_results/checkerframework_3.42.0_results_WPI/urld3c7d5e997_dku_rajkumar_java_api_for_amon_tgz-pJ8-org_json_TestJ8.txt
../dataset/june2020_dataset/urld3c7d5e997_dku_rajkumar_java_api_for_amon_tgz-pJ8-org_json_TestJ8/src/org/amon/AmonLogger.java:59: error: (required.method.not.called) $$ 4 $$ method close $$ connection.getOutputStream() $$ java.io.OutputStream $$ possible exceptional exit due to writer.write(yaml) with exception type java.io.IOException $$ ( 1960, 1988 ) $$ @MustCall method close may not have been invoked on connection.getOutputStream() or any of its aliases.
		final OutputStreamWriter writer = new OutputStreamWriter(connection.getOutputStream());
		                                                                                   ^
  The type of object is: java.io.OutputStream.
  Reason for going out of scope: possible exceptional exit due to writer.write(yaml) with exception type java.io.IOException
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
